# mayancalculator

./: README.org  meson.build
src/: LongCountModel.vala  Main.vala  MayanCalculator.vala  ResultWindow.vala  Window.vala  mayancalculator.gresources.xml  meson.build
src/ui/: dialog.ui  window.ui
