# Include extra files in the src/ directory.

sources += files(
  'Main.vala',
  'MayanCalculator.vala',
  'Window.vala',
  'LongCountModel.vala',
  'ResultWindow.vala'
)

sources += gnome.compile_resources(
  'mayancalculator-resources',
  'mayancalculator.gresources.xml',
  c_name: 'mayancalculator_',
)
